# Booking_service

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: config.py  conftest.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
app/controllers/: auth.py  bookings.py  hotels.py  rooms.py  users.py
app/dao/: base.py
app/database/: database.py
app/dependencies/: auth.py  bookings.py  hotels.py  repositories.py  rooms.py  services.py  unit_of_work.py  users.py
app/exceptions/: exceptions.py
app/hotels/: dao.py  dependencies.py  models.py  repository.py  router.py  services.py
app/hotels/rooms/: dao.py  dependencies.py  models.py  repository.py  router.py  services.py
app/interfaces/: repository.py  unit_of_work.py
app/migrations/: env.py
app/migrations/versions/: 390ed97aa71c_added_role_in_users_model.py  (+3 more)
app/models/: bookings.py  hotels.py  rooms.py  users.py
app/repositories/: base_repository.py  bookings.py  hotels.py  rooms.py  users.py
app/repository/: base_repository.py
app/schemas/: auth.py  bookings.py  email.py  hotels.py  rooms.py  users.py
app/services/: auth.py  bookings.py  email.py  hotels.py  rooms.py  users.py
app/tasks/: celery_settings.py  tasks.py
app/templates/: email_template.html
app/tests/: conftest.py  mock_bookings.json  mock_hotels.json  mock_users.json
app/unit_of_work/: unit_of_work.py
app/users/: auth.py  dependencies.py  models.py  repository.py  router.py  scemas.py  services.py
(+18 files in other folders)
